<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="40.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tvSymbol" android:layout_width="fill_parent" android:layout_height="40.0dip" android:text="@string/symbol" android:layout_weight="1.0" />
    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tvSymbolEng" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/symbol_eng" android:layout_weight="1.0" />
    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tvCode" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/symbol_code" android:layout_weight="1.0" />
</LinearLayout>