<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff444444" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:background="#ffebebe1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:gravity="center" android:id="@id/tvName" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rukeyboard" android:drawableLeft="@drawable/icon" android:drawablePadding="10.0dip" />
    </LinearLayout>
    <ScrollView android:id="@id/ScrollView01" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:gravity="center" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/how_to_activate" />
            <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/activating_keyboard" />
            <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/activating_ime" android:layout_weight="1.0" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>