<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:id="@id/tvSortSym" android:background="#ff38b5ff" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/symbol" android:layout_weight="1.0" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:id="@id/tvSortEng" android:background="#ff38b5ff" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/symbol_eng" android:layout_weight="1.0" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:id="@id/tvSortCode" android:background="#ff38b5ff" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/symbol_code" android:layout_weight="1.0" />
    </LinearLayout>
    <ListView android:id="@id/lvLayout" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</LinearLayout>